# auditx_connector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
auditx_connector/: __init__.py  config.py  models.py  service.py
auditx_connector/publishers/: base.py  java_api.py  kafka.py  postgres.py
